--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,6 @@
-version: "3.8"
 services:
-  api:
-    build: ./apps/api
-    environment:
-      - CONFIG_PATH=/configs/api/config.yaml
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-    volumes:
-      - ./configs/api:/configs/api:ro
-    ports: ["8080:8080"]
-
-  web:
-    build: ./apps/web
-    environment:
-      - VITE_API_BASE=http://localhost:8080
-    ports: ["5173:5173"]
-    depends_on: [api]
-
   bot:
-    build: ./apps/bot
+    build: .
     env_file:
-      - ./apps/bot/.env
-    depends_on: [api]
+      - .env
+    restart: unless-stopped
