docs: Update environment configuration for seamless setup
- Add PAYMENT_PROTOCOL_ENABLED to .env.example
- Update README with correct HTTP 402 configuration examples
- Remove outdated X402 chain references from documentation
- Ensure users can copy .env.example and run without validation errors
- Clear setup instructions for HTTP 402 payment protocol

--- a/apps/odin/.env.example
+++ b/apps/odin/.env.example
@@ -7,6 +7,7 @@ NODE_ENV=development
 LOG_LEVEL=info
 
 # X402 Payment Configuration
+PAYMENT_PROTOCOL_ENABLED=true
 PAYMENT_RECIPIENT_ADDRESS=0x742d35Cc6634C0532925a3b8D6Ac0d449Fc30819
 PAYMENT_CALLBACK_URL=https://your-domain.com/x402/callback
 
