--- a/apps/odin/package.json
+++ b/apps/odin/package.json
@@ -8,7 +8,11 @@
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
     "test": "jest",
-    "lint": "eslint src/**/*.ts"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@solana/web3.js": "^1.87.6",
@@ -35,7 +39,9 @@
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
