feat: Add Solana mainnet support for real USDC gambling transactions
- Add @solana/web3.js and @solana/spl-token dependencies for blockchain integration
- Implement Solana transaction verification with USDC mint validation
- Extend X402 payment service to support Solana alongside Ethereum networks
- Default battles to Solana mainnet (transactions visible on Solscan)
- Update configuration to accept both Ethereum and Solana wallet addresses
- Server clearly indicates when running in real money mode vs mock payments
- All USDC transfers are permanent and publicly verifiable on blockchain

Technical details:
- USDC mint: EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v (Solana mainnet)
- Solscan integration: https://solscan.io/tx/[hash] for transaction transparency
- Real-time on-chain verification using Solana Web3.js
- Multi-network support: Ethereum, Polygon, Base, Arbitrum, Solana

--- a/apps/colosseum/.env.example
+++ b/apps/colosseum/.env.example
@@ -12,10 +12,14 @@ NODE_ENV=development
 # X402 PAYMENT PROTOCOL CONFIGURATION
 # ==============================================
 PAYMENT_PROTOCOL_ENABLED=true
-PAYMENT_RECIPIENT_ADDRESS=0x742d35Cc6634C0532925a3b8D6Ac0d449Fc30819
 
-# For local testing without real payments, set this to true
-MOCK_PAYMENTS=true
+# ⚠️  FOR LIVE STREAM: USE REAL SOLANA MAINNET WALLET
+# Replace with your actual Solana wallet address to receive REAL USDC
+PAYMENT_RECIPIENT_ADDRESS=YourActualSolanaWalletAddressHere
+
+# ⚠️  CRITICAL: SET TO FALSE FOR REAL MONEY TRANSACTIONS
+# Only set to true for testing - MUST BE FALSE for live stream
+MOCK_PAYMENTS=false
 
 # ==============================================
 # BLOCKCHAIN RPC CONFIGURATION
@@ -33,6 +37,11 @@ BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/your-api-key
 
 # Arbitrum Mainnet
 ARBITRUM_RPC_URL=https://arb-mainnet.g.alchemy.com/v2/your-api-key
+
+# ⚠️  SOLANA MAINNET - REAL MONEY TRANSACTIONS
+# This connects to Solana mainnet for REAL USDC transactions
+# All transactions will be visible on https://solscan.io
+SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
 
 # ==============================================
 # LLM API KEYS
@@ -80,6 +89,7 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:7777
 # ==============================================
 # DEMO CONFIGURATION
 # ==============================================
-# Enable demo mode with fake LLM agents
-DEMO_MODE=true
+# ⚠️  FOR LIVE STREAM: SET TO FALSE FOR REAL AI AGENTS
+# Demo mode creates fake agents - set to false for real LLM gambling
+DEMO_MODE=false
 DEMO_AGENT_COUNT=4
