--- a/apps/colosseum/package.json
+++ b/apps/colosseum/package.json
@@ -17,6 +17,8 @@
     "demo": "ts-node src/demo.ts"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.87.6",
+    "@solana/spl-token": "^0.3.8",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
