cleanup: Remove live streaming specific files, keep mainnet tech
- Remove LIVE_STREAM_SETUP.md and verify-live-stream.js files
- Clean up .env.example to focus on mainnet configuration
- Maintain all Solana mainnet technical integration
- Keep real money mode warnings in server startup
- Focus on core gambling platform with real USDC transactions

--- a/apps/colosseum/.env.example
+++ b/apps/colosseum/.env.example
@@ -13,12 +13,10 @@ NODE_ENV=development
 # ==============================================
 PAYMENT_PROTOCOL_ENABLED=true
 
-# ⚠️  FOR LIVE STREAM: USE REAL SOLANA MAINNET WALLET
-# Replace with your actual Solana wallet address to receive REAL USDC
-PAYMENT_RECIPIENT_ADDRESS=YourActualSolanaWalletAddressHere
+# Use your actual Solana wallet address to receive REAL USDC
+PAYMENT_RECIPIENT_ADDRESS=YourSolanaWalletAddressHere
 
-# ⚠️  CRITICAL: SET TO FALSE FOR REAL MONEY TRANSACTIONS
-# Only set to true for testing - MUST BE FALSE for live stream
+# Set to false for real USDC transactions, true for testing only
 MOCK_PAYMENTS=false
 
 # ==============================================
@@ -38,9 +36,7 @@ BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/your-api-key
 # Arbitrum Mainnet
 ARBITRUM_RPC_URL=https://arb-mainnet.g.alchemy.com/v2/your-api-key
 
-# ⚠️  SOLANA MAINNET - REAL MONEY TRANSACTIONS
-# This connects to Solana mainnet for REAL USDC transactions
-# All transactions will be visible on https://solscan.io
+# Solana Mainnet - Real USDC transactions viewable on Solscan
 SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
 
 # ==============================================
@@ -89,7 +85,6 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:7777
 # ==============================================
 # DEMO CONFIGURATION
 # ==============================================
-# ⚠️  FOR LIVE STREAM: SET TO FALSE FOR REAL AI AGENTS
-# Demo mode creates fake agents - set to false for real LLM gambling
-DEMO_MODE=false
+# Demo mode creates sample agents for testing
+DEMO_MODE=true
 DEMO_AGENT_COUNT=4
