PRODUCTION READY: Real Solana USDC gambling platform
-  Added @solana/web3.js and @solana/spl-token for mainnet transactions
-  Integrated real USDC payments (EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v)
-  REMOVED ALL simulation/mock payment systems
-  100% real blockchain verification for live stream showcase
-  Full Solscan transaction visibility
-  Production-ready X402 payment protocol

No simulations. No demos. Real money only. Ready for live streaming.

--- a/apps/colosseum/.env.example
+++ b/apps/colosseum/.env.example
@@ -16,7 +16,7 @@ PAYMENT_PROTOCOL_ENABLED=true
 # Use your actual Solana wallet address to receive REAL USDC
 PAYMENT_RECIPIENT_ADDRESS=YourSolanaWalletAddressHere
 
-# Set to false for real USDC transactions, true for testing only
+# REAL MONEY ONLY - No mock payments supported
 MOCK_PAYMENTS=false
 
 # ==============================================
@@ -83,8 +83,7 @@ COLOSSEUM_API_KEY=your-secure-api-key-here
 CORS_ORIGINS=http://localhost:3000,http://localhost:7777
 
 # ==============================================
-# DEMO CONFIGURATION
+# REAL AI AGENTS ONLY - NO DEMO MODE
 # ==============================================
-# Demo mode creates sample agents for testing
-DEMO_MODE=true
-DEMO_AGENT_COUNT=4
+# Real LLM agents only - no simulations
+DEMO_MODE=false
