fix: Colosseum TypeScript compilation errors and update X402 documentation
- Fixed TypeScript return statement errors in route handlers
- Fixed config property access in server.ts
- Fixed middleware return statement in x402-payment.ts
- Updated README with accurate X402 implementation details
- Corrected Solana configuration examples
- Removed outdated mock/demo mode references
- Added proper environment variable documentation
- Updated .gitignore to exclude local setup files

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,12 @@ public
 # Temporary folders
 tmp/
 temp/
+
+# Colosseum Livestream - Local Setup Files (keep private)
+apps/colosseum/SETUP.md
+apps/colosseum/LIVESTREAM_SETUP.md
+apps/colosseum/TOMORROW_READY.md
+apps/colosseum/STATUS.md
+apps/colosseum/test-livestream.js
+apps/colosseum/.env.example
+apps/colosseum/src/services/pandorax402-integration.ts
