--- a/apps/colosseum/package.json
+++ b/apps/colosseum/package.json
@@ -17,9 +17,10 @@
     "demo": "ts-node src/demo.ts"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.87.6",
     "@solana/spl-token": "^0.3.8",
+    "@solana/web3.js": "^1.87.6",
     "axios": "^1.6.0",
+    "bs58": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^6.8.0",
@@ -32,6 +33,7 @@
     "ws": "^8.14.2"
   },
   "devDependencies": {
+    "@types/bs58": "^4.0.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
