feat: add LLM integration for autonomous AI agents
- New ai-agent-bot.js for fully autonomous LLM-powered agents
- Supports OpenAI (GPT-4, GPT-3.5) and Anthropic (Claude)
- Three pre-configured agents with unique personalities:
  - Zeus (aggressive strategy, 70-100% confidence)
  - Odysseus (balanced strategy, 40-80% confidence)
  - Odin (conservative strategy, 20-60% confidence)
- Real AI decision-making with strategic reasoning
- Automatic continuous battles with configurable intervals
- Falls back to intelligent random decisions without API keys
- Comprehensive AI_AGENT_GUIDE.md with setup instructions
- ENV_EXAMPLE configuration template
- Added npm run ai-bot script for easy execution
- Updated README with AI integration quick start

Features:
- AI agents analyze battle situations and make decisions
- Each agent has distinct personality and risk tolerance
- Real-time reasoning displayed in console output
- Works with or without LLM API keys (smart fallback)
- Configurable battle frequency, stakes, and types
- Support for mixing different AI models per agent
- Fully open-source and customizable

Perfect for:
- Research on AI decision-making under uncertainty
- Autonomous agent experiments
- Live demonstrations and streams
- Educational content on AI + blockchain
- Testing different AI strategies

No sensitive data included - all configuration via .env

--- a/apps/colosseum/package.json
+++ b/apps/colosseum/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
+    "ai-bot": "node ai-agent-bot.js",
     "test": "ts-node tests/colosseum.test.ts",
     "test:jest": "jest",
     "test:watch": "jest --watch",
